<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/game_name"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_margin="15dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/player_vs_comp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/objective" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/objective2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:text="@string/student_name" />

    <Button
        android:id="@+id/rockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_toStartOf="@+id/paperButton"
        android:onClick="buttonSelection"
        android:tag="1"
        android:text="@string/rock" />

    <Button
        android:id="@+id/paperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:onClick="buttonSelection"
        android:tag="2"
        android:text="@string/paper" />

    <Button
        android:id="@+id/spearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_toEndOf="@+id/paperButton"
        android:onClick="buttonSelection"
        android:tag="3"
        android:text="@string/spear" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rockButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@color/button"
        android:onClick="resetButton"
        android:text="@string/submit_button" />


    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="0 : 0"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerImage"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/scoreTextView"
        android:text="Sir Droid-A-Lot"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/scoreTextView"
        android:text="Magical Merlin"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/winner_loser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreTextView"
        android:layout_margin="18dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="Who won?"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/compImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button"
        android:layout_marginTop="15dp"
        android:layout_marginStart="275dp"
        android:layout_marginBottom="15dp"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>